samples/_failures_safe/1761643686_56c70a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e6cd110d.c: In function ‘main’:
./samples/SAFE/__tmp_e6cd110d.c:152: error: expected ‘{’ at end of input
